--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -8,7 +8,7 @@
     "at-rule-no-unknown": null,
     "scss/at-rule-no-unknown": true,
     "order/properties-alphabetical-order": true,
-    "scss/dollar-variable-pattern": "^foo",
+    "scss/dollar-variable-pattern": "[a-z][a-zA-Z]+",
     "scss/selector-no-redundant-nesting-selector": null,
     "selector-class-pattern": null,
     "no-descending-specificity": null,
