--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -13,6 +13,7 @@
     "selector-class-pattern": null,
     "no-descending-specificity": null,
     "selector-no-vendor-prefix": null,
-    "font-family-no-missing-generic-family-keyword": null
+    "font-family-no-missing-generic-family-keyword": null,
+    "keyframes-name-pattern": null
   }
 }
